# OhMyCine

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  Makefile  README.md
.claude/: settings.json
.codex/: config.toml  hooks.json
.codex/agents/: trellis-check.toml  trellis-implement.toml  trellis-research.toml
.codex/hooks/: inject-subagent-context.py
.github/scripts/: generate-player-beta-release-notes.py
.github/workflows/: cli.yml  hub.yml  manual-build.yml  player-beta-release.yml  player.yml  server.yml
.trellis/: .template-hashes.json
docs/architecture/: 00-index.md  01-overview.md  02-server-design.md  03-player-design.md  04-hub-design.md  05-cli-design.md  06-roadmap.md  07-security-design.md
hub/: index.md  package-lock.json  package.json
hub/.vitepress/: config.ts
hub/dev/: api.md  index.md  spec.md
hub/plugins/: index.md  install.md
player/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  uno.config.ts  vite.config.ts
player/scripts/: setup-libmpv.mjs  verify-home-source-cards.ts  (+7 more)
player/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
player/src-tauri/capabilities/: default.json
player/src-tauri/src/: main.rs
player/src-tauri/src/commands/: credential.rs  emby.rs  history.rs  local_file.rs  mod.rs  player.rs  preference.rs  raw_scan_cache.rs
player/src-tauri/src/mpv/: events.rs  mod.rs  player.rs  render.rs  surface.rs
player/src-tauri/src/mpv/platform/: windows.rs
(+260 files in other folders)
